<resources>
    <string name="app_name">Task Maker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="newer_first">New -> Old</string>
    <string name="older_first">Older -> New</string>
    <string name="low_high"><![CDATA[Priority: Low -> High]]></string>
    <string name="high_low"><![CDATA[Priority: High -> Low]]></string>
    <string name="sort_tasks">Sort</string>
    <string name="delete_all">Delete all</string>
    <string name="save">Save</string>
    <string name="a_button_for_adding_new_tasks">A button for adding new tasks</string>
    <string name="task_tray_is_empty">Task tray is empty</string>
</resources>