<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:paddingHorizontal="16dp"
    tools:context=".ui.fragments.AddEditFragment"
    tools:ignore="SpeakableTextPresentCheck">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_add_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/title"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_add_body"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/description"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField_add_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_add_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="10"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup_priorities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/radioButton_priority_low"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField_add_body">

        <RadioButton
            android:id="@+id/radioButton_priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/priority_low"
            android:fontFamily="sans-serif-medium"
            android:text="@string/low"
            android:textColor="@color/priority_low"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radioButton_priority_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/priority_medium"
            android:fontFamily="sans-serif-medium"
            android:text="@string/medium"
            android:textColor="@color/priority_medium"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radioButton_priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/priority_high"
            android:fontFamily="sans-serif-medium"
            android:text="@string/high"
            android:textColor="@color/priority_high"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>